<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>grasp_tutorials</name>
  <version>0.5.0</version>
  <description>Instructions and demo code for developing intelligent manipulation app with this ROS2 Grasp Library</description>
  <license>Apache License 2.0</license>
  <maintainer email="sharron.liu@intel.com">Sharron Liu</maintainer>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <author email="sharron.liu@intel.com">Sharron Liu</author>
  <author email="yu.yan@intel.com">Yu Yan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
