<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>draw_x</name>
  <version>0.5.0</version>
  <description>A demo app for draw_x</description>
  <author email="yu.yan@intel.com">Yu Yan</author>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>robot_interface</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>robot_interface</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
