<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>recognize_pick</name>
  <version>0.5.0</version>
  <description>A demo app for object segmentation, grasp detection, and picking</description>
  <author email="sharron.liu@intel.com">Sharron LIU</author>
  <maintainer email="sharron.liu@intel.com">Sharron LIU</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>people_msgs</build_depend>
  <build_depend>robot_interface</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>people_msgs</exec_depend>
  <exec_depend>robot_interface</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
