<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>handeye_dashboard</name>
  <version>0.1.0</version>
  <description>The handeye_dashboard package</description>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <license>Apache License 2.0</license>
  <author email="yu.yan@intel.com">Yu Yan</author>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>handeye</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
