<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_interface</name>
  <version>0.5.0</version>
  <description>Native robot motion control interface</description>
  <maintainer email="yu.yan@intel.com">Yu Yan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_eigen</build_depend>
  <build_depend>eigen</build_depend>

  <exec_depend>rclcpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
